@@ -1,5 +1,9 @@
 2001-01-04  Bernhard Held  <bernhard@bernhardheld.de>
 
+	* src/SDCCmain.c (processFile): fix processing of ../../src.c
+
+2001-01-04  Bernhard Held  <bernhard@bernhardheld.de>
+
 	* src/SDCCglue.h: printIvalCharPtr(), not printIvalChar()
 
 2001-01-04  Bernhard Held  <bernhard@bernhardheld.de>
